--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-dash>=2.15.0
-dash-bootstrap-components>=1.5.0
+dash>=3.0.0
+dash-bootstrap-components>=2.0.0
 pandas>=2.1.4
 plotly>=6.0.0
 requests>=2.31.0
 pyarrow>=19.0.1
 numpy>=2.2.4
 polars>=1.25.2
+tomli>=2.2.1
