--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 dependencies = [
     "dash>=3.0.4",
     "dash-bootstrap-components>=2.0.0",
+    "typing_extensions>=4.7.1",
     "pandas>=2.2.3",
     "plotly>=6.0.1",
     "requests>=2.32.3",
